--- a/Language/5to6-perlop.pod
+++ b/Language/5to6-perlop.pod
@@ -18,9 +18,9 @@ equivalents, please see the Perl 6 documentation.
 
 =head1 SOURCES
 
-I'm taking my information from L<http://doc.perl6.org> (in particular,
-L<http://doc.perl6.org/language/operators>), supplemented by the
-design documents at L<http://design.perl6.org/> and input from the denizens
+I'm taking my information from L<https://doc.perl6.org> (in particular,
+L<https://doc.perl6.org/language/operators>), supplemented by the
+design documents at L<https://design.perl6.org/> and input from the denizens
 of #perl6 on irc.freenode.org
 
 =head2 Operator Precedence and Associativity
@@ -28,7 +28,7 @@ of #perl6 on irc.freenode.org
 The operator precedence table is somewhat different in Perl 6 than it is in
 Perl 5, so I will not detail it here. If you need to know the precedence and
 associativity of a given operator in Perl 6, refer to
-L<http://doc.perl6.org/language/operators#Operator_Precedence>.
+L<https://doc.perl6.org/language/operators#Operator_Precedence>.
 
 =head2 Terms and List Operators
 
@@ -45,7 +45,7 @@ dereference something, however, the arrow is the dot. It is also the dot
 for method calls. So, Perl 5's C<< $arrayref->[7] >> becomes
 C<$arrayref.[7]> in Perl 6 and, similarly, C<< $user->name >> becomes
 C<$user.name>. The C<< => >> arrow is used for constructing Pairs, see
-L<http://doc.perl6.org/language/terms#Pair>.
+L<https://doc.perl6.org/language/terms#Pair>.
 
 =head2 Auto-increment and Auto-decrement
 
@@ -133,7 +133,7 @@ of its arguments.
 
 C<~~> is the smart match operator as in Perl 5, but it's also I<just>
 the match operator in Perl 6, as noted above. For how smart matching
-works in Perl 6, see L<http://design.perl6.org/S03.html#Smart_matching>.
+works in Perl 6, see L<https://design.perl6.org/S03.html#Smart_matching>.
 
 =head2 Smartmatch Operator
 
@@ -202,7 +202,7 @@ The comma operator works mostly as expected, but technically it creates
 L<Lists|/type/List>) or separates arguments
 in function calls. Also, there is a C<:> variant that turns function
 calls into method calls - see
-L<http://doc.perl6.org/language/operators#infix_%3A>.
+L<https://doc.perl6.org/language/operators#infix_%3A>.
 
 The C<< => >> operator works similarly to the Perl 5 "fat comma"
 behavior in that it allows an unquoted identifier on its left side, but
@@ -235,7 +235,7 @@ C<orelse>.
 =head2 Quote and Quote-like Operators
 
 For all the gory details on quoting constructs, see
-L<http://doc.perl6.org/language/quoting>.
+L<https://doc.perl6.org/language/quoting>.
 
 There is a quoting operator that allows absolute literal strings: C<Q> or
 C<｢…｣>, although the latter might be difficult to find on your keyboard,
@@ -257,7 +257,7 @@ manner: C<< %a = 1 => 2, 3 => 4;say "%a[]"; >> results in a space
 separating the pairs and tabs separating the key from the value in each
 pair (apparently). You can also interpolate Perl 6 code in strings using
 curly braces. For all the details, see
-L<http://doc.perl6.org/language/quoting#Interpolation%3A_qq>.
+L<https://doc.perl6.org/language/quoting#Interpolation%3A_qq>.
 
 C<qw> works as in Perl 5, and can also be rendered as C<< <...> >>. E.
 g. C<qw/a b c/> is equivalent to C<< <a b c> >>.
@@ -280,7 +280,7 @@ documented, called C<.trans>. C<.trans> uses a list of pairs, as
 follows: C<< $x.trans(['a'..'c'] => ['A'..'C'], ['d'..'q'] =>
 ['D'..'Q'], ['r'..'z'] => ['R'..'Z']); >> A much more extensive
 description of the uses of C<.trans> can be found at
-L<http://design.perl6.org/S05.html#Transliteration>. The C<y///>
+L<https://design.perl6.org/S05.html#Transliteration>. The C<y///>
 equivalent has been done away with.
 
 Heredocs are specified differently in Perl 6. You use C<:to> with your quoting
@@ -292,7 +292,7 @@ C<qq>.
 =head2 I/O Operators
 
 The full details on Input/Output in Perl 6 can be found at
-L<http://doc.perl6.org/language/io>.
+L<https://doc.perl6.org/language/io>.
 
 As C<< <...> >> is the quote-words construct in Perl 6, C<< <> >> is not
 used for reading lines from a file. You can do that by either making an
