add TODOs for Meta Operators so it's easier to spot that documenting Perl 6 supports lazyness too

--- a/Language/operators.pod
+++ b/Language/operators.pod
@@ -107,6 +107,35 @@ L<#prefix ...> etc. stub operators.
 Defining custom operators is covered in
 L</language/functions#Defining_Operators>.
 
+=head1 Meta Operators
+
+=head2 Assignment Operators
+TODO
+
+=head2 Negated Relational Operators
+TODO
+
+=head2 Reversed Operators
+TODO
+
+=head2 Hyper Operators
+TODO
+
+=head2 Reduction Operators
+TODO
+
+=head2 Cross Operators
+TODO
+
+=head2 Zip Operators
+TODO
+
+=head2 Sequential Operators
+TODO
+
+=head2 Nesting of Meta Operators
+TODO
+
 =head1 Z<>Term Precedence
 
 =head2 circumfix C«< >»
