Modify subtitle a bit

--- a/Language/phasers.pod
+++ b/Language/phasers.pod
@@ -2,7 +2,7 @@
 
 =TITLE Phasers
 
-=SUBTITLE Execution phases
+=SUBTITLE Program execution phases and corresponding phaser blocks
 
 The lifetime (execution timeline) of a program is broken up into phases. A
 I<phaser> is a block of code called during a specific execution phase.
