document DateTime.new(Str) laxness, as brought up in RT #127002

--- a/Type/DateTime.pod
+++ b/Type/DateTime.pod
@@ -65,9 +65,14 @@ is from the components (year, month, day, hour, ...) separately. Another is to
 pass a L<Date|/type/Date> object for the date component, and specify the time
 component-wise. Yet another is to obtain the time from an
 L<Instant|/type/Instant>, and only supply the time zone and formatter. Or
-instead of an Instant you can supply an L<Int|/type/Int> as a UNIX timestamp,
-or a C<Str|/type/Str> formatted as C<yyyy-mm-ddThh:mm::ssZ> or
-C<yyyy-mm-ddThh:mm:ss+0100> (ISO 8601 timestamp notation).
+instead of an Instant you can supply an L<Int|/type/Int> as a UNIX timestamp.
+
+You can also supply a C<Str|/type/Str> formatted in ISO 8601 timestamp
+notation or as a full L<RFC 3339|http://tools.ietf.org/html/rfc3339>
+date and time.  Strings should be formatted as C<yyyy-mm-ddThh:mm::ssZ>
+or C<yyyy-mm-ddThh:mm:ss+0100>.  We are somewhat less restrictive than the
+ISO 8601 standard, as we allow Unicode digits and mixing of condensed
+and extended time formats.
 
 An invalid input string throws an exception of type
 L<X::Temporal::InvalidFormat>. If you supply a string that includes a time
