--- a/Type/Date.pod
+++ b/Type/Date.pod
@@ -17,16 +17,15 @@ with the string operators C<eq, lt, le> etc. also gives the right result.
 C<Date.today> creates
 an object the current day according to the system clock.
 
-    my $d = Date.new(2012, 12, 24); # Christmas Eve!
-    say $d;                         # 2012-12-24
-    say $d.year;                    # 2012
+    my $d = Date.new(2015, 12, 24); # Christmas Eve!
+    say $d;                         # 2015-12-24
+    say $d.year;                    # 2015
     say $d.month;                   # 12
     say $d.day;                     # 24
     say $d.day-of-week;             # 1  (that's Monday)
-    my $n = Date.new('2012-12-31'); # New Year's Eve
-    say $n - $d;                    # 7
-    say $n + 1;                     # 2013-01-01
-
+    my $n = Date.new('2015-12-31'); # New Year's Eve
+    say $n - $d;                    # 7 days between New Years/Christmas Eve
+    say $n + 1;                     # 2016-01-01
 
 =head1 Methods
 
@@ -35,22 +34,24 @@ an object the current day according to the system clock.
 Defined as:
 
     proto method new() {*}
-    multi method new($year,   $month,  $day)          returns Date:D
+    multi method new($year, $month, $day)             returns Date:D
     multi method new(:$year!, :$month = 1, :$day = 1) returns Date:D
     multi method new(Str $date)                       returns Date:D
+    multi method new(Instant:D $dt)                   returns Date:D
     multi method new(DateTime:D $dt)                  returns Date:D
 
 Usage:
 
     $date = Date.new(YEAR, MONTH, DAY)
-    $date = Date.new(year => YEAR, MONTH?, DAY?)
+    $date = Date.new(year => YEAR, month => MONTH?, day => DAY?)
     $date = Date.new(YYYY-MM-DD)
-    $date = Date.new
+    $date = Date.new(now)
+    $date = Date.new(DateTime.now)
 
 Creates a new C<Date> object, either from a triple of (year, month, day)
-integers, or from a string of the form C<YYYY-MM-DD>
-(L<ISO 8601|http://en.wikipedia.org/wiki/ISO_8601>), or from a DateTime
-object.
+that can be coerced to integers, or from a string of the form C<YYYY-MM-DD>
+(L<ISO 8601|http://en.wikipedia.org/wiki/ISO_8601>), or from an Instant
+or DateTime object.
 
 =head2 method today
 
@@ -92,7 +93,7 @@ Usage:
 
    DATE.succ
 
-Returns the following day.
+Returns a C<Date> of the following day.
 
 =head2 method pred
 
@@ -104,7 +105,7 @@ Usage:
 
     DATE.pred
 
-Returns the previous day.
+Returns a C<Date> of the previous day.
 
 =head2 method Str
 
