Fix reference to :{} syntax

--- a/Language/syntax.pod
+++ b/Language/syntax.pod
@@ -389,10 +389,15 @@ When assigning to a C<%> sigil variable, the curly braces are optional.
 
     my %ages = fred => 23, jean => 87, ann => 4;
 
-Because C<{ }> is also used for blocks, you can force Hash literal context by
-prefixing it with a C<:> like:
+By default keys in C<{ }> are forced to strings. To compose a hash with
+non-string keys, use a colon prefix:
 
-    my %when = :{ (now) => "Instant", (DateTime.now) => "DateTime" };
+    my $when = :{ (now) => "Instant", (DateTime.now) => "DateTime" };
+
+Note that with objects as keys, you cannot access non-string keys as strings:
+
+    :{ -1 => 41, 0 => 42, 1 => 43 }<0>  # Any
+    :{ -1 => 41, 0 => 42, 1 => 43 }{0}  # 42
 
 =head3 Regex literals
 
