--- a/Type/Hash.pod
+++ b/Type/Hash.pod
@@ -57,10 +57,15 @@ To assign to a variable without the C<%> sigil, you may use curly braces:
 
     my $h = { a => 1, b => 2 };
 
-Because C<{ }> is also used to denote blocks, you may prefix it with a colon
-(X<:{ ... }|:{ }>) to force hash literal context:
+By default keys in C<{ }> are forced to strings. To compose a hash with
+non-string keys, use a colon prefix:
 
     my $when = :{ (now) => "Instant", (DateTime.now) => "DateTime" };
+
+Note that with objects as keys, you cannot access non-string keys as strings:
+
+    :{ -1 => 41, 0 => 42, 1 => 43 }<0>  # Any
+    :{ -1 => 41, 0 => 42, 1 => 43 }{0}  # 42
 
 =head1 Looping over hash keys and values
 
