--- a/Language/modules.pod
+++ b/Language/modules.pod
@@ -397,7 +397,7 @@ To share your module, do the following:
     C<%?RESOURCES> Hash indexed on the name provided.
 
 	The L<Test::META module | https://github.com/jonathanstowe/Test-META/>
-	can help you check the correctner of the META.info file. 
+	can help you check the correctness of the META.info file.
 
     =end item
 
