--- a/Language/modules.pod
+++ b/Language/modules.pod
@@ -412,9 +412,9 @@ To share your module, do the following:
 
     =item Push your project to GitHub.
 
-    =item Ping someone on IRC (#perl6 at freenode) to either show you how to
-    add your module to the L<ecosystem|https://github.com/perl6/ecosystem>, or
-    else ask them if they could please add it for you.
+    =item Create a PR on L<ecosystem|https://github.com/perl6/ecosystem> adding
+    your module to META.list, or Ping someone on IRC (#perl6 at freenode) to
+    get help having it added.
 
     =item After the pull request has been accepted, wait for an hour. If
     your module doesn't show up on L<https://modules.perl6.org/>, please
