doc Assignment Operators

--- a/Language/operators.pod
+++ b/Language/operators.pod
@@ -110,7 +110,25 @@ L</language/functions#Defining_Operators>.
 =head1 Meta Operators
 
 =head2 Assignment Operators
-TODO
+
+Most operators can be combined with the assignment operator to modify a 
+value and apply the result to a container in one go. Containers will be
+autovivified if possible.
+
+    my $a = 32;
+    $a += 10;  # 42
+    
+    my $a = 3; 
+    $a min= 5; # still 3
+    $a min= 2; # 2
+
+Z<blocked by #63642 my @a = 1,2; @a ,= 3,4;>
+
+Although not strictly operators, methods can be used in the same fashion.
+
+    my SomeClass $a .= new;
+    my $a = 3.14;
+    $a .= Int; # 3
 
 =head2 Negated Relational Operators
 TODO
