explain Meta Operators

--- a/Language/operators.pod
+++ b/Language/operators.pod
@@ -109,6 +109,12 @@ L</language/functions#Defining_Operators>.
 
 =head1 Meta Operators
 
+Meta operators can be parameterized with other operators in the same way as
+functions can take functions as parameters. Perl 6 will generate the actual
+combinded operator in the background, allowing the mechanism to be applied
+to user defined operators. There are quite a few Meta operators with
+different semantics, as explained in detail as follows.
+
 =head2 Assignment Operators
 
 Most operators can be combined with the assignment operator to modify a 
