doc Assignment Operators

--- a/Language/operators.pod
+++ b/Language/operators.pod
@@ -137,7 +137,20 @@ Although not strictly operators, methods can be used in the same fashion.
     $a .= Int; # 3
 
 =head2 Negated Relational Operators
-TODO
+
+The result of a relational operator returning C<Bool> can be negated by
+prefixing with C<!>. To avoid visial confusion with the C<!!> operator,
+you may not modify any operator already beginning with C<!>.
+
+There are shortcuts for C<!==> and C<!eq>, namely C<!=> and C<ne>.
+
+    my $a = True;
+    say so $a != True; # False
+    my $i = 10;
+
+    my $release = Date.new(:2015year, :12month, :24day);
+    my $today = Date.today;
+    say so $release !before $today; # True
 
 =head2 Reversed Operators
 TODO
