doc Reversed Operators, the question "why?" remains unanswered.

--- a/Language/operators.pod
+++ b/Language/operators.pod
@@ -153,7 +153,11 @@ There are shortcuts for C<!==> and C<!eq>, namely C<!=> and C<ne>.
     say so $release !before $today; # True
 
 =head2 Reversed Operators
-TODO
+
+Any infix operator may be called with its two arguments reversed by prefixing
+with C<R>. Associativity of operands is reversed as well.
+
+    say [R/] 2, 4, 16; # 2
 
 =head2 Hyper Operators
 TODO
