Document return value of while/repeat loops.

--- a/Language/control.pod
+++ b/Language/control.pod
@@ -641,6 +641,8 @@ $x++ while $x < 12
 
 Also see C<repeat/while> and C<repeat/until> below.
 
+All these forms may produce a return value the same way C<loop> does.
+
 =head2 X<repeat/while, repeat/until|control flow,repeat>
 
 Perl 5 allows one to apply a statement modifier to a C<do> block such that
@@ -664,6 +666,8 @@ This can also be written quite naturally with C<until>:
     repeat {
         ...
     } until $x >= 10;
+
+All these forms may produce a return value the same way C<loop> does.
 
 =head2 X<return|control flow>
 
