user defined example is more better

--- a/Language/operators.pod
+++ b/Language/operators.pod
@@ -226,10 +226,17 @@ C<%outer »+» %inner;>   only keys of %inner that exist in %outer will occur in
 =head2 Reduction Operators
 
 Reduction operators apply any infix operator, surrounded by C<[> and C<]>,
-element by element and return the resulting value. They can be defined as a
-list prefix operators or will be generated automatically. 
+element by element and return the resulting value.
 
     say [+] 1,2,3; # 6
+
+They can be defined as a list prefix operators or will be generated automatically. 
+
+    multi infix:<[~~]> (@c, &test) is looser(&infix:<~~>) { 
+        gather for @c { take $_ if test($_) } 
+    }; 
+    my @l = 1,'a',2,'b'; 
+    say @l [~~] {$^a ~~ Str}; # (a b)
 
 For list infix operators, flattening is not done on the input list. This
 allowes list operators to become the reduction operator.
