Fix some links... maybe.

--- a/Language/control.pod
+++ b/Language/control.pod
@@ -40,7 +40,7 @@ executed.
 Unless it stands alone as a statement, a block simply creates a closure.  The
 statements inside are not executed immediately.  Closures are another topic
 and how they are used is explained
-L<elsewhere|language/functions#Blocks and Lambdas>.  For now it is just
+L<elsewhere|/language/functions#Blocks and Lambdas>.  For now it is just
 important to understand when blocks run and when they do not:
 
     say "We get here"; { say "then here." }; { say "not here"; 0; } or die;
@@ -296,7 +296,7 @@ for @foo { 42.print } # prints 42 as many times as @foo has elements
 
 =end code
 
-Pointy block syntax or a L<placeholder|language/variables#The C<^> Twigil>
+Pointy block syntax or a L<placeholder|/language/variables#The C<^> Twigil>
 may be used to name the parameter, of course.
 
 =begin code
