Be accurate about what is said in example comment

--- a/Language/control.pod
+++ b/Language/control.pod
@@ -98,7 +98,7 @@ expression.  So:
 ...will not say 42.  However, the block is only evaluated once each time
 the expression it is contained in is evaluated:
 
-    # This says "..1 ..2 ..3" not "..1 ...2 ....3"
+    # This says "(..1 ..2 ..3)" not "(..1 ...2 ....3)"
     my $f = "."; say do { $f ~= "." } X~ 1,2,3;
 
 In other words, it follows the same reification rules as everything else.
