Mention that "if 0 {...}" slips.

--- a/Language/control.pod
+++ b/Language/control.pod
@@ -141,8 +141,8 @@ conditionally.  Do note that the condition is still always evaluated first:
 
 The statement modifier form is probably best used sparingly.
 
-The C<if> statement itself will either return an empty list, if it does not
-run the block, or it will return the value which the block produces:
+The C<if> statement itself will either L<slip|/type/Slip> us an empty list, if
+it does not run the block, or it will return the value which the block produces:
 
     my $c = 0; say (1, (if 1 { $c += 42; 2; }), 3, $c); # says "1 2 3 42"
     my $d = 0; say (1, (if 0 { $d += 42; 2; }), 3, $d); # says "1 3 0"
