avoid a redeclaration warning if example code is run

--- a/Language/control.pod
+++ b/Language/control.pod
@@ -255,7 +255,7 @@ two differences C<unless> works the same as L<if>:
     $_ = 1; unless False -> $a { $a.say } ; # says "False"
 
     my $c = 0; say (1, (unless 0 { $c += 42; 2; }), 3, $c); # says "(1 2 3 42)"
-    my $c = 0; say (1, (unless 1 { $c += 42; 2; }), 3, $c); # says "(1 3 0)"
+    my $d = 0; say (1, (unless 1 { $d += 42; 2; }), 3, $d); # says "(1 3 0)"
 
 =head3 X<with, orwith, without|control flow,with orwith without>
 
