Improve with/orwith section examples

--- a/Language/control.pod
+++ b/Language/control.pod
@@ -264,14 +264,19 @@ truth.  In addition, it topicalizes on the condition, much like C<given>:
 
     with "abc".index("a") { .say }      # prints 0
 
-These may be cascaded:
+Instead of C<elsif>, C<orwith> may be used to chain definedness tests:
 
-    with   $s.index("a") { "Found a at $_" }
-    orwith $s.index("b") { "Found b at $_" }
-    orwith $s.index("c") { "Found c at $_" }
-    else                 { "Didn't find a, b or c" }
+    # The below code says "Found a at 0"
+    my $s = "abc";
+    with   $s.index("a") { say "Found a at $_" }
+    orwith $s.index("b") { say "Found b at $_" }
+    orwith $s.index("c") { say "Found c at $_" }
+    else                 { say "Didn't find a, b or c" }
 
 You may intermix C<if>-based and C<with>-based clauses.
+
+    # This says "Yes"
+    if 0 { say "No" } orwith Nil { say "No" } orwith 0 { say "Yes" };
 
 As with C<unless>, you may use C<without> to check for undefinedness,
 but you may not add an C<else> clause:
