Note that you can use :day as synonym for :1day

--- a/Type/DateTime.pod
+++ b/Type/DateTime.pod
@@ -322,6 +322,7 @@ unit may be passed.
     my $d = DateTime.new(date => Date.new('2015-02-27'));
     say $d.later(month => 1).later(:2days);  # 2015-03-29T00:00:00Z
     say $d.later(days => 2).later(:1month);  # 2015-04-01T00:00:00Z
+    say $d.later(days => 2).later(:month);   # same, as +True === 1
 
 Negative offsets are allowed, though L<#method earlier> is more idiomatic for
 that.
