Mention C++ support in NativeCall

--- a/Language/nativecall.pod
+++ b/Language/nativecall.pod
@@ -391,6 +391,13 @@ This code binds to C<$var> a new L<Proxy|/type/Proxy> object that
 redirects all its accesses to the integer variable named "errno" as
 exported by the "libc.so.6" library.
 
+
+=head1 C++ Support
+
+NativeCall offer a support to use class and method  from C++ as show in
+L<https://github.com/rakudo/rakudo/blob/nom/t/04-nativecall/13-cpp-mangling.t> (and it associated cpp file)
+But it's not as tested and developped than the C support for now.
+
 =head1 Examples
 
 The L<zavolaj|https://github.com/jnthn/zavolaj> git repository (where NativeCall was
