doc Sequential Operators and Zip Operators

--- a/Language/operators.pod
+++ b/Language/operators.pod
@@ -254,10 +254,23 @@ quote it with C<[]> (e.g. C<[\[\x]]>).
 TODO
 
 =head2 Zip Operators
-TODO
+
+The zip metaoperator, C<Z>, will apply a given infix operator to pairs taken
+one left, one right, from it's arguments. The resulting list is returned.
+
+    my @l = <a b c> Z~ 1,2,3; # [a1 b2 c3]
+    
+If one of the operands runs out of elements prematurely, the zip operator will
+stop. An infinite list can be used to repeat elements.
+
+    my @l = <a b c d> Z~ ':' xx *; [a: b: c: d:] 
 
 =head2 Sequential Operators
-TODO
+
+The sequential metaoperator, C<S>, will suppress any concurrency, or reordering
+done by the optimizer. Most simple infix operators are supported.
+
+    say so 1 S& 2 S& 3; # True
 
 =head2 Nesting of Meta Operators
 TODO
