doc Nesting of Meta Operators

--- a/Language/operators.pod
+++ b/Language/operators.pod
@@ -273,7 +273,14 @@ done by the optimizer. Most simple infix operators are supported.
     say so 1 S& 2 S& 3; # True
 
 =head2 Nesting of Meta Operators
-TODO
+
+To avoid ambiguity when chaining meta operators use square brackets to help the
+compiler to understand you.
+
+    my @a = 1,2,3; 
+    my @b = 5,6,7; 
+    @a X[+=] @b; 
+    say @a; # [19 20 21]
 
 =head1 Z<>Term Precedence
 
