interpolation for hash (slices) has changed too

--- a/Language/5to6-nutshell.pod
+++ b/Language/5to6-nutshell.pod
@@ -342,6 +342,7 @@ I<Indexing>
 
     say $calories{apple}; # Perl 5
     say %calories<apple>; # Perl 6 - angle brackets; % instead of $
+    say %calories«$key»;  # Perl 6 - double angles interpolate as a list of Str
 =end item
 
 =begin item
@@ -350,6 +351,8 @@ I<Value-slicing>
     say join ',', @calories{'pear', 'plum'}; # Perl 5
     say join ',', %calories{'pear', 'plum'}; # Perl 6 - % instead of @
     say join ',', %calories<pear plum>;      # Perl 6 (prettier version)
+    my $keys = 'pear plum';
+    say join ',', %calories«$keys»;          # Perl 6 the split is done after interpolation
 =end item
 
 =begin item
