Make a server example that works with telnet

--- a/Type/IO/Socket/Async.pod
+++ b/Type/IO/Socket/Async.pod
@@ -17,10 +17,9 @@ use v6;
 
 react {
     whenever IO::Socket::Async.listen('localhost',3333) -> $conn {
-        my $bs = $conn.Supply(:bin);
-        $bs.tap(-> $buf { await $conn.write: $buf } );
-        $bs.wait;
-        $conn.close;
+        whenever $conn.Supply(:bin) -> $buf { 
+            await $conn.write: $buf 
+        } 
     }
 }
 =end code
