Fix minor typos

--- a/Language/functions.pod
+++ b/Language/functions.pod
@@ -155,7 +155,7 @@ type:
     say as-json([True, 42]);    # [true, 42]
 
 C<multi> without any specific routine type always defaults to a C<sub>, but you
-can use it on methods as well. The candidates are all the mutli methods of the
+can use it on methods as well. The candidates are all the multi methods of the
 object:
 
     class Congrats {
