--- a/Language/testing.pod
+++ b/Language/testing.pod
@@ -146,7 +146,7 @@ C<$description> of the test.
 =item X<is-deeply($value, $expected, $description?)|is-deeply>
 
 Marks a test as passed if C<$value> and C<$expected> compare positively with
-the L<eqv operator|/routine/eq>. This is the best way to check for equality of
+the L<eqv operator|/routine/eqv>. This is the best way to check for equality of
 (deep) data structures. The function accepts an optional C<$description> of
 the test.
 
